--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Render JSON Data</h1>
-    <div id="output"></div>
+    <h1> style="text-align:center;">Welcome to JSON Data Rendering Library</h1>
+    <div style="text-align:center;"></div>id="output"></div>
    <script src="mustache.js"></script>
    <script src="script.js"></script>
 </body>
