--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <title>JSON Data Rendering</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1 style="text-align: center;">Welcome to JSON Data Rendering Library</h1>
+<body style="background-color:powderblue;">
 
-    <div style="text-align: center;">
-        <div id="output"></div>
-    </div>
+    <h1> Welcome to JSON Data Rendering Library </h1>
+    <div id="output"></div>
+    
     
    <script src="mustache.js"></script>
    <script src="script.js"></script>
